--- a/index.html
+++ b/index.html
@@ -1,23 +1,17 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>OOF</title>
+		<title>Abhinav Diwakar</title>
 	</head>
 	<body>
 		<nav>
     		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
+        		<li><a href="/books">Books I have read</a></li>
+	        	<li><a href="/game">Games I have played</a></li>
+        		<li><a href="/movies">Best Movies according to me</a></li>
+        		<li><a href="/random">Random</a></li>
     		</ul>
 		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>HI. i m da berger</h1>
-				<p>wtf <em>hello</em> Don't trust me. <a href="/about">oof</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
 		<footer>
     		<ul>
         		<li><a href="mailto:abhinavcool42@gmail.com">email</a></li>
