--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		<h1>Hello there. Welcome to my page.</h1>
 		<nav>
     		<ul>
-        		<li><a href="/books.html">Books I have read</a></li>
-	        	<li><a href="/game.html">Games I have played</a></li>
-        		<li><a href="/movies.html">Best Movies according to me</a></li>
-        		<li><a href="/random.html">Random</a></li>
+        		<li><a href="/books">Books I have read</a></li>
+	        	<li><a href="/game">Games I have played</a></li>
+        		<li><a href="/movies">Best Movies according to me</a></li>
+        		<li><a href="/random">Random</a></li>
     		</ul>
 		</nav>
 		<footer>
