--- a/notepad.html
+++ b/notepad.html
@@ -1,9 +1,42 @@
-<!doctype html>
-  <meta charset="utf-8">
-    <title>html5 notepad</title>
-      <textarea></textarea>
-  <script>
-    var n = document.getElementsByTagName('textarea')[0];
-    n.onchange = function(){localStorage.setItem("n",n.value);}
-    n.value = localStorage.getItem("n");
-  </script>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<title>Abhinav Diwakar - Notes</title>
+		<meta charset="utf-8">
+		<meta name="description" content="Javascript notes - Abhinav Diwakar">
+		<meta name="author" content="Abhinav Diwakar">
+
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+		<script src="assets/bootstrap.js"></script>
+		<script src="assets/script.js"></script>
+
+		<link rel="shortcut icon" href="../assets/img/favicon.ico" />
+		<link href="assets/style.css" rel="stylesheet">
+		<link href="assets/bootstrap.custom.css" rel="stylesheet">
+	</head>
+	<body>
+		<div id="container"></div>
+		<ul id="context-menu">
+			<li id="add-note">Add a note</li>
+			<li id="del-note">Delete this note</li>
+		</ul>
+		<button type="submit" class="btn btn-primary" id="show_help">Aide</button>
+		<div class="modal hide fade" id="help_content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal">×</button>
+				<h3>Easy notes lmao</h3>				
+			</div>	        
+	        <div class="modal-body">
+        		All data is stored in browser cookies, so be careful not to delete them, otherwise your notes will be lost.<br/><br/>
+				Use :
+        		<ul>
+        			<li>Right click to create a note</li>
+        			<li>Right click on a note to delete it</li>
+        		</ul>
+	        </div>
+	        <div class="modal-footer">
+	        	<button type="submit" class="btn btn-primary" data-dismiss="modal">Continue</button>
+	        </div>
+		</div>
+	</body>
+</html>
