--- a/notepad.html
+++ b/notepad.html
@@ -6,13 +6,12 @@
 		<meta name="description" content="Javascript notes - Abhinav Diwakar">
 		<meta name="author" content="Abhinav Diwakar">
 
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-		<script src="assets/bootstrap.js"></script>
-		<script src="assets/script.js"></script>
+		<script src="/assets/jquery.min.js"></script>
+		<script src="/assets/bootstrap.js"></script>
+		<script src="/assets/script.js"></script>
 
-		<link rel="shortcut icon" href="../assets/img/favicon.ico" />
-		<link href="assets/style.css" rel="stylesheet">
-		<link href="assets/bootstrap.custom.css" rel="stylesheet">
+		<link href="/assets/style.css" rel="stylesheet">
+		<link href="/assets/bootstrap.custom.css" rel="stylesheet">
 	</head>
 	<body>
 		<div id="container"></div>
@@ -20,7 +19,7 @@
 			<li id="add-note">Add a note</li>
 			<li id="del-note">Delete this note</li>
 		</ul>
-		<button type="submit" class="btn btn-primary" id="show_help">Aide</button>
+		<button type="submit" class="btn btn-primary" id="show_help">Help</button>
 		<div class="modal hide fade" id="help_content">
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal">×</button>
