--- a/index.html
+++ b/index.html
@@ -1545,6 +1545,6 @@ body {
 		<button onclick="actions.tintin()">Tintin</button>
 	</p>
 </div>
-
+<iframe src="http://www.staggeringbeauty.com/" style="border: 1px inset #ddd" width="498" height="598"></iframe>
 </body>
 </html>
